--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+
+* {
+  background-color: rgb(61, 59, 59);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input{
+  background-color: rgb(208, 219, 233);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li {
+  list-style: none;
+  background-color: darkgray;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loginContainer{ 
+  background-color: rgb(62, 121, 121);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);  
+}
+
+.chatboxContainer{
+  padding-right: auto;
+  position: absolute;
+  height: 60px;
+  width: 100%;
+  bottom: 3.5%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.messagesContainer{
+  padding-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+  background-color: silver;
+}
+
+#messageInput{
+  height: 100%;
+  width: 600px;
+  border: none;  
+}
+
+.messageButton{
+  background-color: rgb(66, 151, 111);
+  color: rgb(243, 234, 234);
+  height: 103%;
+  width: 100px
+}
+
+.logoutButton{
+  background-color: rgb(192, 36, 57);
+  color: rgb(243, 234, 234);
+  height: 103%;
+  width: 100px;
+  position: absolute;
+  right: 20px;
+}
+
+.nextButton{
+  background-color: rgb(25, 112, 212);
+  color: rgb(243, 234, 234);
+  height: 103%;
+  width: 100px;
+  position: absolute;
+  left: 20px;
+}
+
+.infoBox{
+  height: 40px;
+  width: 300px;
+  background-color: rgb(192, 36, 57);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);  
 }
